name: chat-frontend
version: 0.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Grasswire
maintainer: Chris Allen
stability: stable
homepage: https://github.com/grasswire/chat-app
synopsis: Hello World
description: It's Hello, World, but in the browser.
category: Web
author: Hamish Mackenzie
data-dir: ""

source-repository head
    type: git
    location: https://github.com/grasswire/chat-app

executable ghcjs-dom-hello
    build-depends: base >=4.2 && <5
                 , mtl >=2.1 && <2.3
                 , ghcjs-dom >=0.2 && <0.3
                 , reflex == 0.3
                 , reflex-dom == 0.2
                 , containers >= 0.5 && < 0.6
                 , text >= 1.2 && < 1.3
                 , transformers == 0.4.3.0
                 , safe
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
